--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
 
       <div class="container d-flex align-items-center justify-content-between">
-        <h1 class="brandLogo"><a href="">Delicious</a></h1>
+        <h1 class="Logo"><a href="">Delicious</a></h1>
 
         <nav id="mainNav" class="navigation">
           <ul>
@@ -41,7 +41,7 @@
             </li>
             <li><a class="navLink scrollto" href="">Contact</a></li>
           </ul>
-          <i class="bi bi-list mobileNavToggle"></i>
+          <i class="bi bi-list mobilecheck"></i>
         </nav>
       </div>
     </header>
