--- a/index.html
+++ b/index.html
@@ -46,5 +46,77 @@
       </div>
     </header>
 
+    <section class="heroSection">
+      <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div
+            class="carousel-item firstSlide active"
+            data-bg="public/img/hero-carousel/hero-carousel-1.jpg">
+            <div class="darkOverlay"></div>
+            <div class="heroContent">
+              <h2><span class="text-orange">Delicious</span> Restaurant</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet consectetur adipisicing. </p>
+              <div class="ctaButtons">
+                <a href="#" class="menuBtn">Our Menu</a>
+                <a href="#" class="bookBtn">Book a Table</a>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="carousel-item secondSlide"
+            data-bg="public/img/hero-carousel/hero-carousel-2.jpg">
+            <div class="darkOverlay"></div>
+            <div class="heroContent">
+              <h2>At vero eos et accusamus</h2>
+              <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut.</p>
+              <div class="ctaButtons">
+                <a href="#" class="menuBtn">Our Menu</a>
+                <a href="#" class="bookBtn">Book a Table</a>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="carousel-item thirdSlide" data-bg="public/img/hero-carousel/hero-carousel-3.jpg">
+            <div class="darkOverlay"></div>
+            <div class="heroContent">
+              <h2>Temporibus autem quibusdam</h2>
+              <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt omnis iste natus error sit voluptatem accusantium.</p>
+              <div class="ctaButtons">
+                <a href="#" class="menuBtn">Our Menu</a>
+                <a href="#" class="bookBtn">Book a Table</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#heroCarousel"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </button>
+
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#heroCarousel"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </button>
+      </div>
+    </section>
+
+
+
+
+
+
+
+
+    
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </html>
