feat: Add about section to homepage and establish initial SASS styling infrastructure.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Delicious</title>
-  <link rel="stylesheet" href="/public/css/app.css">
-  <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet"/>
-</head>
-<body>
-
-  <header id="mainHeader" class="site-header fixed-top">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Delicious</title>
+    <link rel="stylesheet" href="/public/css/app.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header id="mainHeader" class="site-header fixed-top">
       <div class="topBar d-flex align-items-center">
-        <div class="container d-flex justify-content-between align-items-center">
+        <div
+          class="container d-flex justify-content-between align-items-center"
+        >
           <div class="contactInfo d-flex align-items-center gap-1">
             <i class="bi bi-phone d-flex align-items-center">
               <span>+1 5589 55488 55</span>
             </i>
-            <i class="bi bi-clock d-flex align-items-center"><span> Mon-Sat: 11AM - 23PM</span></i>
+            <i class="bi bi-clock d-flex align-items-center"
+              ><span> Mon-Sat: 11AM - 23PM</span></i
+            >
           </div>
           <div class="languages d-none d-md-flex align-items-center">
             <a href="" class="bookTableBtn scrollto">Book a table</a>
@@ -37,7 +43,9 @@
             <li><a class="navLink scrollto" href="">Chefs</a></li>
             <li><a class="navLink scrollto" href="">Gallery</a></li>
             <li class="dropdown">
-              <a href=""><span>Dropdown</span> <i class="bi bi-chevron-down"></i></a>
+              <a href=""
+                ><span>Dropdown</span> <i class="bi bi-chevron-down"></i
+              ></a>
             </li>
             <li><a class="navLink scrollto" href="">Contact</a></li>
           </ul>
@@ -51,11 +59,16 @@
         <div class="carousel-inner">
           <div
             class="carousel-item firstSlide active"
-            data-bg="public/img/hero-carousel/hero-carousel-1.jpg">
+            data-bg="public/img/hero-carousel/hero-carousel-1.jpg"
+          >
             <div class="darkOverlay"></div>
             <div class="heroContent">
               <h2><span class="text-orange">Delicious</span> Restaurant</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet consectetur adipisicing. </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Lorem ipsum dolor sit amet consectetur adipisicing.
+              </p>
               <div class="ctaButtons">
                 <a href="#" class="menuBtn">Our Menu</a>
                 <a href="#" class="bookBtn">Book a Table</a>
@@ -65,11 +78,17 @@
 
           <div
             class="carousel-item secondSlide"
-            data-bg="public/img/hero-carousel/hero-carousel-2.jpg">
+            data-bg="public/img/hero-carousel/hero-carousel-2.jpg"
+          >
             <div class="darkOverlay"></div>
             <div class="heroContent">
               <h2>At vero eos et accusamus</h2>
-              <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut.</p>
+              <p>
+                Nam libero tempore, cum soluta nobis est eligendi optio cumque
+                nihil impedit quo minus id quod maxime placeat facere possimus,
+                omnis voluptas assumenda est, omnis dolor repellendus.
+                Temporibus autem quibusdam et aut officiis debitis aut.
+              </p>
               <div class="ctaButtons">
                 <a href="#" class="menuBtn">Our Menu</a>
                 <a href="#" class="bookBtn">Book a Table</a>
@@ -78,11 +97,18 @@
           </div>
 
           <div
-            class="carousel-item thirdSlide" data-bg="public/img/hero-carousel/hero-carousel-3.jpg">
+            class="carousel-item thirdSlide"
+            data-bg="public/img/hero-carousel/hero-carousel-3.jpg"
+          >
             <div class="darkOverlay"></div>
             <div class="heroContent">
               <h2>Temporibus autem quibusdam</h2>
-              <p>Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt omnis iste natus error sit voluptatem accusantium.</p>
+              <p>
+                Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem
+                quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                consequuntur magni dolores eos qui ratione voluptatem sequi
+                nesciunt omnis iste natus error sit voluptatem accusantium.
+              </p>
               <div class="ctaButtons">
                 <a href="#" class="menuBtn">Our Menu</a>
                 <a href="#" class="bookBtn">Book a Table</a>
@@ -95,7 +121,8 @@
           class="carousel-control-prev"
           type="button"
           data-bs-target="#heroCarousel"
-          data-bs-slide="prev">
+          data-bs-slide="prev"
+        >
           <span class="carousel-control-prev-icon"></span>
         </button>
 
@@ -103,9 +130,46 @@
           class="carousel-control-next"
           type="button"
           data-bs-target="#heroCarousel"
-          data-bs-slide="next">
+          data-bs-slide="next"
+        >
           <span class="carousel-control-next-icon"></span>
         </button>
+      </div>
+    </section>
+
+    <section class="aboutSection">
+      <div>
+        <img src="public/img/about.jpg" alt="about" />
+      </div>
+      <div>
+        <div>
+          <h2>
+            Voluptatem dignissimos provident quasi corporis voluptates sit
+            assumenda.
+          </h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+        <div>
+          <ul>
+            <li><span><i class="bi bi-check-all text-orange"></i></span> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+            <li><span><i class="bi bi-check-all text-orange"></i></span> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+            <li><span><i class="bi bi-check-all text-orange"></i></span> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+              irure dolor in reprehenderit in voluptate trideta storacalaperda
+              mastiro dolore eu fugiat nulla pariatur.
+            </li>
+          </ul>
+        </div>
+        <div>
+          <p>
+            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore
+            eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident
+          </p>
+        </div>
       </div>
     </section>
 
@@ -116,7 +180,19 @@
 
 
 
-    
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
+
+
+
+
+
+
+
+
+  </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"
+  ></script>
 </html>
