feat: Introduce main application styling with a new SASS module and compiled CSS.

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div>
         <img src="public/img/about.jpg" alt="about" />
       </div>
-      <div>
+      <div class="aboutTitle">
         <div>
           <h2>
             Voluptatem dignissimos provident quasi corporis voluptates sit
