feat: Implement 'Why Us' section and introduce Sass-based styling with new CSS and SASS files.

--- a/index.html
+++ b/index.html
@@ -172,7 +172,30 @@
         </div>
       </div>
     </section>
-
+  
+  <section class="whysection">
+    <div class="whyTitle">
+      <p class="text-orange whytitle">WHY US</p>
+      <p class="whypara">Why choose <span class="text-orange">Our Restaurant</span></p>
+    </div>
+    <div class="cubescontainer">
+      <div class="cubes">
+        <h2 class="text-orange">01</h2>
+        <p class="cubetitle">Lorem ipsum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+      </div>
+      <div class="cubes">
+        <h2 class="text-orange">02</h2>
+        <p class="cubetitle">Ripellat Nihil</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, dolorem?</p>
+      </div>
+      <div class="cubes">
+        <h2 class="text-orange">03</h2>
+        <p>Ad ad velit qui</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi labore iur</p>
+      </div>
+    </div>
+  </section>
 
 
 
