--- a/index.html
+++ b/index.html
@@ -154,11 +154,19 @@
         </div>
         <div>
           <ul>
-            <li><span><i class="bi bi-check-all text-orange"></i></span> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-            <li><span><i class="bi bi-check-all text-orange"></i></span> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-            <li><span><i class="bi bi-check-all text-orange"></i></span> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-              irure dolor in reprehenderit in voluptate trideta storacalaperda
-              mastiro dolore eu fugiat nulla pariatur.
+            <li>
+              <span><i class="bi bi-check-all text-orange"></i></span> Ullamco
+              laboris nisi ut aliquip ex ea commodo consequat.
+            </li>
+            <li>
+              <span><i class="bi bi-check-all text-orange"></i></span> Duis aute
+              irure dolor in reprehenderit in voluptate velit.
+            </li>
+            <li>
+              <span><i class="bi bi-check-all text-orange"></i></span> Ullamco
+              laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+              dolor in reprehenderit in voluptate trideta storacalaperda mastiro
+              dolore eu fugiat nulla pariatur.
             </li>
           </ul>
         </div>
@@ -172,47 +180,95 @@
         </div>
       </div>
     </section>
-  
-  <section class="whysection">
-    <div class="whyTitle">
-      <p class="text-orange whytitle">WHY US</p>
-      <p class="whypara">Why choose <span class="text-orange">Our Restaurant</span></p>
-    </div>
-    <div class="cubescontainer">
-      <div class="cubes">
-        <h2 class="text-orange">01</h2>
-        <p class="cubetitle">Lorem ipsum.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod.</p>
+
+    <section class="whysection">
+      <div class="whyTitle">
+        <p class="text-orange whytitle">WHY US</p>
+        <p class="whypara">
+          Why choose <span class="text-orange">Our Restaurant</span>
+        </p>
       </div>
-      <div class="cubes">
-        <h2 class="text-orange">02</h2>
-        <p class="cubetitle">Ripellat Nihil</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, dolorem?</p>
+      <div class="cubescontainer">
+        <div class="cubes">
+          <h2 class="text-orange">01</h2>
+          <p class="cubetitle">Lorem ipsum.</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+            quod.
+          </p>
+        </div>
+        <div class="cubes">
+          <h2 class="text-orange">02</h2>
+          <p class="cubetitle">Ripellat Nihil</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni,
+            dolorem?
+          </p>
+        </div>
+        <div class="cubes">
+          <h2 class="text-orange">03</h2>
+          <p>Ad ad velit qui</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+            labore iur
+          </p>
+        </div>
       </div>
-      <div class="cubes">
-        <h2 class="text-orange">03</h2>
-        <p>Ad ad velit qui</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi labore iur</p>
+    </section>
+
+    <!-- Menu (7ta nrj3 liha)-->
+    <section class="whysection">
+      <div class="whyTitle">
+        <p class="text-orange whytitle">MENU</p>
+        <p class="whypara">
+          Check Our Tasty <span class="text-orange">Menu</span>
+        </p>
       </div>
-    </div>
-  </section>
+      <div>
+        <p>All</p>
+        <p>Starters</p>
+        <p>Salads</p>
+        <p>Specialty</p>
+      </div>
+    </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <!--Specials -->
+    <section class="whysection">
+      <div class="whyTitle">
+        <p class="text-orange whytitle">SPECIALS</p>
+        <p class="whypara">
+          Check Our Tasty <span class="text-orange">Specials</span>
+        </p>
+      </div>
+      <div class="specials">
+        <div class="specialstext">
+          <p>Modi sit est</p>
+          <p>Unde praesentium sed</p>
+          <p>Pariatur explicabo vel</p>
+          <p>Nostrum qui quasi</p>
+          <p>Iusto ut expedita aut</p>
+        </div>
+        <div class="specialssectext">
+          <h2>Architecto ut aperiam autem id</h2>
+          <p>
+            Qui laudantium consequatur laborum sit qui ad sapiente dila parde
+            sonata raqer a videna mareta paulona marka
+          </p>
+          <p>
+            Et nobis maiores eius. Voluptatibus ut enim blanditiis atque harum
+            sint. Laborum eos ipsum ipsa odit magni. Incidunt hic ut molestiae
+            aut qui. Est repellat minima eveniet eius et quis magni nihil.
+            Consequatur dolorem quaerat quos qui similique accusamus nostrum rem
+            vero.
+          </p>
+        </div>
+        <div class="specialsimg">
+          <img src="public/img/specials-1.jpg" alt="specials" />
+        </div>
+      </div>
+    </section>
   </body>
+
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
