--- a/index.html
+++ b/index.html
@@ -267,8 +267,55 @@
         </div>
       </div>
     </section>
-  </body>
 
+    <!-- Events (7ta nrj3 liha) -->
+  <section>
+
+  </section>
+
+
+  <section class="booktable">
+    <div class="bookTitle">
+        <p class="text-orange booktitle">BOOK A TABLE</p>
+        <p class="bookpara">
+          Book a <span class="text-orange">Table</span>
+        </p>
+    </div>
+    <div class="booktablecontainer">
+      <div>
+        <img src="public/img/reservation.jpg" alt="events">
+      </div>
+      <div class="bookinputs">
+        <div>
+          <input type="text" placeholder="Your Name">
+          <input type="text" placeholder="Your Email">
+          <input type="text" placeholder="Your Phone">
+        </div>
+        <div>
+          <input type="date" placeholder="Your Date">
+          <input type="time" placeholder="Your Time">
+          <input type="number" placeholder="Number of people">
+        </div>
+        <div>
+          <textarea placeholder="Your Message" cols="117" rows="5"></textarea>
+        </div>
+        <button>Book a Table</button>
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
+
+
+
+
+
+  </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
