feat: add gallery section, refine booking form, and introduce SASS for styling.

--- a/index.html
+++ b/index.html
@@ -269,52 +269,74 @@
     </section>
 
     <!-- Events (7ta nrj3 liha) -->
-  <section>
+    <section></section>
 
-  </section>
-
-
-  <section class="booktable">
-    <div class="bookTitle">
+    <section class="booktable">
+      <div class="bookTitle">
         <p class="text-orange booktitle">BOOK A TABLE</p>
+        <p class="bookpara">Book a <span class="text-orange">Table</span></p>
+      </div>
+      <div class="booktablecontainer">
+        <div>
+          <img src="public/img/reservation.jpg" alt="events" />
+        </div>
+        <div class="bookinputs">
+          <div>
+            <input type="text" placeholder="Your Name" />
+            <input type="text" placeholder="Your Email" />
+            <input type="text" placeholder="Your Phone" />
+          </div>
+          <div>
+            <input type="date" placeholder="Your Date" />
+            <input type="time" placeholder="Your Time" />
+            <input type="number" placeholder="Number of people" />
+          </div>
+          <div>
+            <textarea placeholder="Your Message" cols="64" rows="5"></textarea>
+          </div>
+          <button>Book a Table</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="booktable">
+      <div class="bookTitle">
+        <p class="text-orange booktitle">GALLERY</p>
         <p class="bookpara">
-          Book a <span class="text-orange">Table</span>
+          Some photos from <span class="text-orange">Our Restaurant</span>
         </p>
-    </div>
-    <div class="booktablecontainer">
-      <div>
-        <img src="public/img/reservation.jpg" alt="events">
       </div>
-      <div class="bookinputs">
-        <div>
-          <input type="text" placeholder="Your Name">
-          <input type="text" placeholder="Your Email">
-          <input type="text" placeholder="Your Phone">
+      <div class="gallery pt-1 text-center d-flex flex-wrap">
+        <div class="row row-cols-4">
+          <div class="col p-0">
+            <img src="public/img/gallery/gallery-1.jpg" alt="gallery" />
+          </div>
+          <div class="col p-0">
+            <img src="public/img/gallery/gallery-2.jpg" alt="gallery" />
+          </div>
+          <div class="col p-0">
+            <img src="public/img/gallery/gallery-3.jpg" alt="gallery" />
+          </div>
+          <div class="col p-0">
+            <img src="public/img/gallery/gallery-4.jpg" alt="gallery" />
+          </div>
         </div>
-        <div>
-          <input type="date" placeholder="Your Date">
-          <input type="time" placeholder="Your Time">
-          <input type="number" placeholder="Number of people">
+        <div class="row row-cols-4">
+          <div class="col p-0">
+            <img src="public/img/gallery/gallery-5.jpg" alt="gallery" />
+          </div>
+          <div class="col p-0">
+            <img src="public/img/gallery/gallery-6.jpg" alt="gallery" />
+          </div>
+          <div class="col p-0">
+            <img src="public/img/gallery/gallery-7.jpg" alt="gallery" />
+          </div>
+          <div class="col p-0">
+            <img src="public/img/gallery/gallery-8.jpg" alt="gallery" />
+          </div>
         </div>
-        <div>
-          <textarea placeholder="Your Message" cols="117" rows="5"></textarea>
-        </div>
-        <button>Book a Table</button>
       </div>
-    </div>
-  </section>
-
-
-
-
-
-
-
-
-
-
-
-
+    </section>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
