--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       </div>
       <div class="cubescontainer">
         <div class="cubes">
-          <h2 class="text-orange">01</h2>
+          <h2 class="numb">01</h2>
           <p class="cubetitle">Lorem ipsum.</p>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
@@ -198,7 +198,7 @@
           </p>
         </div>
         <div class="cubes">
-          <h2 class="text-orange">02</h2>
+          <h2 class="numb">02</h2>
           <p class="cubetitle">Ripellat Nihil</p>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni,
@@ -206,7 +206,7 @@
           </p>
         </div>
         <div class="cubes">
-          <h2 class="text-orange">03</h2>
+          <h2 class="numb">03</h2>
           <p>Ad ad velit qui</p>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
@@ -269,7 +269,58 @@
     </section>
 
     <!-- Events (7ta nrj3 liha) -->
-    <section></section>
+      <section class="caro-bg">
+    <div id="carouselExampleCaptions" class="carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active d-flex caro">
+      <div class="carousel-img pt-4">
+        <img src="/public/img/events-slider/events-slider-1.jpg" class="" alt="...">
+      </div>
+      <div class="text-white">
+        <h2>Birthday Parties</h2>
+        <p>$189</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt sint, atque laborum aspernatur debitis nemo?</p>
+        <ul>
+          <li>Lorem ipsum dolor sit amet, consectetur adipisicing.</li>
+          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
+          <li>Lorem ipsum, dolor sit amet consectetur adipisicing.</li>
+        </ul>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum error illo perspiciatis tenetur voluptas</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="/public/img/events-slider/events-slider-2.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>
+        <p>Some representative placeholder content for the second slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="/public/img/events-slider/events-slider-3.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+  </section>
+
+
+
 
     <section class="booktable">
       <div class="bookTitle">
@@ -292,7 +343,7 @@
             <input type="number" placeholder="Number of people" />
           </div>
           <div>
-            <textarea placeholder="Your Message" cols="64" rows="5"></textarea>
+            <textarea placeholder="Your Message" cols="94" rows="5"></textarea>
           </div>
           <button>Book a Table</button>
         </div>
@@ -337,6 +388,32 @@
         </div>
       </div>
     </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
