feat: Add a new chefs section, remove the events carousel, and introduce new styling assets.

--- a/index.html
+++ b/index.html
@@ -269,58 +269,6 @@
     </section>
 
     <!-- Events (7ta nrj3 liha) -->
-      <section class="caro-bg">
-    <div id="carouselExampleCaptions" class="carousel slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active d-flex caro">
-      <div class="carousel-img pt-4">
-        <img src="/public/img/events-slider/events-slider-1.jpg" class="" alt="...">
-      </div>
-      <div class="text-white">
-        <h2>Birthday Parties</h2>
-        <p>$189</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt sint, atque laborum aspernatur debitis nemo?</p>
-        <ul>
-          <li>Lorem ipsum dolor sit amet, consectetur adipisicing.</li>
-          <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</li>
-          <li>Lorem ipsum, dolor sit amet consectetur adipisicing.</li>
-        </ul>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum error illo perspiciatis tenetur voluptas</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="/public/img/events-slider/events-slider-2.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="/public/img/events-slider/events-slider-3.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-  </section>
-
-
-
 
     <section class="booktable">
       <div class="bookTitle">
@@ -389,31 +337,106 @@
       </div>
     </section>
 
+    <section class="booktable">
+      <div class="bookTitle">
+        <p class="text-orange booktitle">CHEFS</p>
+        <p class="bookpara">
+          Our Professional <span class="text-orange">Chefs</span>
+        </p>
+      </div>
+      <div class="container my-5">
+        <div class="row">
+          <div class="col-12 col-md-4 mb-4">
+            <div class="card border-0 shadow-sm h-100">
+              <div class="position-relative">
+                <img
+                  src="/public/img/chefs/chefs-1.jpg"
+                  class="card-img-top"
+                  alt="Walter White"
+                />
+                <div class="position-absolute top-0 bottom-0 start-0"></div>
+              </div>
 
+              <div class="card-body pt-3 pb-2">
+                <h5 class="card-title fw-bold">Walter White</h5>
+                <p class="card-text text-muted">Master Chef</p>
 
+                <div class="social-icons">
+                  <a href="#"><i class="bi bi-x-circle-fill me-2"></i></a>
+                  <a href="#"><i class="bi bi-facebook me-2"></i></a>
+                  <a href="#"><i class="bi bi-instagram me-2"></i></a>
+                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
+          <div class="col-12 col-md-4 mb-4">
+            <div class="card border-0 shadow-sm h-100">
+              <div class="position-relative">
+                <img
+                  src="/public/img/chefs/chefs-2.jpg"
+                  class="card-img-top"
+                  alt="Sarah Jhonson"
+                />
+                <div class="position-absolute top-0 bottom-0 start-0"></div>
+              </div>
 
+              <div class="card-body pt-3 pb-2">
+                <h5 class="card-title fw-bold">Sarah Jhonson</h5>
+                <p class="card-text text-muted">Patissier</p>
 
+                <div class="social-icons">
+                  <a href="#"><i class="bi bi-x-circle-fill me-2"></i></a>
+                  <a href="#"><i class="bi bi-facebook me-2"></i></a>
+                  <a href="#"><i class="bi bi-instagram me-2"></i></a>
+                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
+          <div class="col-12 col-md-4 mb-4">
+            <div class="card border-0 shadow-sm h-100">
+              <div class="position-relative">
+                <img
+                  src="/public/img/chefs/chefs-3.jpg"
+                  class="card-img-top"
+                  alt="William Anderson"
+                />
+                <div class="position-absolute top-0 bottom-0 start-0"></div>
+              </div>
 
+              <div class="card-body pt-3 pb-2">
+                <h5 class="card-title fw-bold">William Anderson</h5>
+                <p class="card-text text-muted">Cook</p>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                <div class="social-icons">
+                  <a href="#"><i class="bi bi-x-circle-fill me-2"></i></a>
+                  <a href="#"><i class="bi bi-facebook me-2"></i></a>
+                  <a href="#"><i class="bi bi-instagram me-2"></i></a>
+                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
