--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
           Our Professional <span class="text-orange">Chefs</span>
         </p>
       </div>
-      <div class="container my-5">
+      <div class="container mt-5">
         <div class="row">
           <div class="col-12 col-md-4 mb-4">
             <div class="card border-0 shadow-sm h-100">
@@ -407,7 +407,7 @@
                 <div class="position-absolute top-0 bottom-0 start-0"></div>
               </div>
 
-              <div class="card-body pt-3 pb-2">
+              <div class="card-body pt-3">
                 <h5 class="card-title fw-bold">William Anderson</h5>
                 <p class="card-text text-muted">Cook</p>
 
@@ -424,9 +424,66 @@
       </div>
     </section>
   
+
+    <!-- testimonial section (7ta nrj3 liha tahiya)-->
+  <section>
+
+  </section>
   
   
-  
+  <!-- contact section -->
+
+  <section class="booktable">
+    <div class="bookTitle">
+        <p class="text-orange booktitle">CONTACT</p>
+        <p class="bookpara">
+          Check Our <span class="text-orange">Contact</span>
+        </p>
+      </div>
+      <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3025.756639219625!2d-0.127758!3d51.5073509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sBuckingham%20Palace!5e0!3m2!1sen!2s!4v1633123881117!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <div>
+        <div>
+          <h2>
+            Get in Touch
+          </h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde facere iusto nobis officiis optio, facilis aliquam?</p>
+          <div>
+            <i class="bi bi-geo-alt"></i>
+            <div>
+              <p>Location</p>
+              <p>A103 Adam Street, New York, NY 535022</p>
+            </div>
+            <div>
+              <i class="bi bi-envelope"></i>
+              <div>
+                <p>Email</p>
+                <p>info@example.com</p>
+              </div>
+            </div>
+            <div>
+              <i class="bi bi-phone"></i>
+              <div>
+                <p>Phone</p>
+                <p>+1 5589 55488 55</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>
+              <input type="text" placeholder="Your Name">
+              <input type="email" placeholder="Your Email">
+            </div>
+            <div>
+              <input type="text" placeholder="Subject">
+              <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+            </div>
+          </div>
+          <button>Send Message</button>
+        </div>
+      </div>
+  </section>
   
   
   
