--- a/index.html
+++ b/index.html
@@ -447,57 +447,65 @@
           referrerpolicy="no-referrer-when-downgrade"
         ></iframe>
       </div>
-      <div class="contact">
-        <div class="contactcontent">
-          <h2>Get in Touch</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde
-            facere iusto nobis officiis optio, facilis aliquam?
-          </p>
-          <div class="contactinfo">
-            <i class="bi bi-geo-alt"></i>
-            <div>
-              <p>Location</p>
-              <p>A103 Adam Street, New York, NY 535022</p>
-            </div>
-            <div>
-              <i class="bi bi-envelope"></i>
-              <div>
-                <p>Email</p>
-                <p>info@example.com</p>
-              </div>
-            </div>
-            <div>
-              <i class="bi bi-phone"></i>
-              <div>
-                <p>Phone</p>
-                <p>+1 5589 55488 55</p>
-              </div>
-            </div>
+
+      <div class="container">
+  <div class="contactTitle">
+    <div class="contacttitle">
+      <h2>Get in touch</h2>
+      <p>Et id eius voluptates atque nihil voluptatem enim in tempore minima sit ad mollitia commodi minus.</p>
+      
+      <div class="contactpara">
+        <div class="contact">
+          <i class="bi bi-geo-alt"></i>
+          <div>
+            <p class="infos">Location:</p>
+            <p class="infos-text">A108 Adam Street, New York, NY 535022</p>
           </div>
         </div>
-        <div>
+        <div class="contact">
+          <i class="bi bi-envelope"></i>
           <div>
-            <input type="text" placeholder="Your Name" />
-            <input type="email" placeholder="Your Email" />
-          </div>
-          <div>
-            <input type="text" placeholder="Subject" />
-            <textarea
-              name=""
-              id=""
-              cols="30"
-              rows="10"
-              placeholder="Message"
-            ></textarea>
+            <p class="infos">Email:</p>
+            <p class="infos-text">info@example.com</p>
           </div>
         </div>
-        <button>Send Message</button>
+        <div class="contact">
+          <i class="bi bi-phone"></i>
+          <div>
+            <p class="infos">Call:</p>
+            <p class="infos-text">+1 5589 55488 55</p>
+          </div>
+        </div>
       </div>
+    </div>
+    
+    <div class="contactform">
+      <form>
+        <div class="form-row">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Your Name">
+          </div>
+          <div class="form-group">
+            <input type="email" class="form-control" placeholder="Your Email">
+          </div>
+        </div>
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Subject">
+        </div>
+        <div class="form-group">
+          <textarea class="form-control" rows="12" cols="5" placeholder="Message"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Send Message</button>
+      </form>
+    </div>
+  </div>
+</div>
     </section>
 
 
-
+<footer>
+  
+</footer>
 
 
 
