feat: add footer section

--- a/index.html
+++ b/index.html
@@ -503,8 +503,16 @@
     </section>
 
 
-<footer>
-  
+<footer class="footer">
+  <div class="container">
+    <div>
+        <i class="bi bi-geo-alt"></i>
+          <div>
+            <p class="infos">Location:</p>
+            <p class="infos-text">A108 Adam Street, New York, NY 535022</p>
+          </div>
+    </div>
+  </div>
 </footer>
 
 
