feat: introduce new `app.css` for styling and refactor chef card and footer layouts in `index.html`.

--- a/index.html
+++ b/index.html
@@ -347,75 +347,84 @@
       <div class="container mt-5">
         <div class="row">
           <div class="col-12 col-md-4 mb-4">
-            <div class="card border-0 shadow-sm h-100">
-              <div class="position-relative">
+            <div class="card border-0 shadow-sm position-relative h-50">
+              <div class="">
                 <img
                   src="/public/img/chefs/chefs-1.jpg"
                   class="card-img-top"
                   alt="Walter White"
                 />
-                <div class="position-absolute top-0 bottom-0 start-0"></div>
-              </div>
-
-              <div class="card-body pt-3 pb-2">
-                <h5 class="card-title fw-bold">Walter White</h5>
-                <p class="card-text text-muted">Master Chef</p>
-
-                <div class="social-icons">
-                  <a href="#"><i class="bi bi-x-circle-fill me-2"></i></a>
-                  <a href="#"><i class="bi bi-facebook me-2"></i></a>
-                  <a href="#"><i class="bi bi-instagram me-2"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                <div class="position-absolute top-100 pt-6 w-100 px-1 bottom-0 start-0">
+                  <div class="bg-white ">
+                    <h5 class="card-title fw-bold px-1"> <span class="text-orange border-bottom">Walter </span>White</h5>
+                    <div class="d-flex justify-content-between">
+                      <div class="px-1">
+                        <p class="card-text text-muted">Master Chef</p>
+                      </div>
+                      <div class="px-1">
+                        <i class="bi bi-twitter"></i>
+                        <i class="bi bi-facebook"></i>
+                        <i class="bi bi-instagram"></i>
+                        <i class="bi bi-linkedin"></i>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-12 col-md-4 mb-4">
-            <div class="card border-0 shadow-sm h-100">
-              <div class="position-relative">
+<div class="col-12 col-md-4 mb-4">
+            <div class="card border-0 shadow-sm position-relative h-50">
+              <div class="">
                 <img
                   src="/public/img/chefs/chefs-2.jpg"
                   class="card-img-top"
-                  alt="Sarah Jhonson"
+                  alt="William Anderson"
                 />
-                <div class="position-absolute top-0 bottom-0 start-0"></div>
-              </div>
-
-              <div class="card-body pt-3 pb-2">
-                <h5 class="card-title fw-bold">Sarah Jhonson</h5>
-                <p class="card-text text-muted">Patissier</p>
-
-                <div class="social-icons">
-                  <a href="#"><i class="bi bi-x-circle-fill me-2"></i></a>
-                  <a href="#"><i class="bi bi-facebook me-2"></i></a>
-                  <a href="#"><i class="bi bi-instagram me-2"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                <div class="position-absolute top-100 pt-6 w-100 px-1 bottom-0 start-0">
+                  <div class="bg-white ">
+                    <h5 class="card-title fw-bold px-1"> <span class="text-orange border-bottom">sarah</span> jhonson</h5>
+                    <div class="d-flex justify-content-between">
+                      <div class="px-1">
+                        <p class="card-text text-muted">Master Chef</p>
+                      </div>
+                      <div class="px-1">
+                        <i class="bi bi-twitter"></i>
+                        <i class="bi bi-facebook"></i>
+                        <i class="bi bi-instagram"></i>
+                        <i class="bi bi-linkedin"></i>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
 
           <div class="col-12 col-md-4 mb-4">
-            <div class="card border-0 shadow-sm h-100">
-              <div class="position-relative">
+            <div class="card border-0 shadow-sm position-relative h-50">
+              <div class="">
                 <img
                   src="/public/img/chefs/chefs-3.jpg"
                   class="card-img-top"
                   alt="William Anderson"
                 />
-                <div class="position-absolute top-0 bottom-0 start-0"></div>
-              </div>
-
-              <div class="card-body pt-3">
-                <h5 class="card-title fw-bold">William Anderson</h5>
-                <p class="card-text text-muted">Cook</p>
-
-                <div class="social-icons">
-                  <a href="#"><i class="bi bi-x-circle-fill me-2"></i></a>
-                  <a href="#"><i class="bi bi-facebook me-2"></i></a>
-                  <a href="#"><i class="bi bi-instagram me-2"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                <div class="position-absolute top-100 pt-6 w-100 px-1 bottom-0 start-0">
+                  <div class="bg-white ">
+                    <h5 class="card-title fw-bold px-1"> <span class="text-orange border-bottom">William </span>Anderson</h5>
+                    <div class="d-flex justify-content-between">
+                      <div class="px-1">
+                        <p class="card-text text-muted">Master Chef</p>
+                      </div>
+                      <div class="px-1">
+                        <i class="bi bi-twitter"></i>
+                        <i class="bi bi-facebook"></i>
+                        <i class="bi bi-instagram"></i>
+                        <i class="bi bi-linkedin"></i>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -425,7 +434,21 @@
     </section>
 
     <!-- testimonial section (7ta nrj3 liha tahiya)-->
-    <section></section>
+    <section>
+
+
+
+
+      
+    </section>
+
+
+
+
+
+
+
+
 
     <!-- contact section -->
 
@@ -508,9 +531,24 @@
     <div>
         <i class="bi bi-geo-alt"></i>
           <div>
-            <p class="infos">Location:</p>
+            <p class="infos">Address
+            </p>
             <p class="infos-text">A108 Adam Street, New York, NY 535022</p>
           </div>
+      <div>
+        <i class="bi bi-telephone"></i>
+        <div>
+          <p class="infos">Phone: +1 5589 55488 55</p>
+          <p class="infos-text">email: info@example.com</p>
+        </div>
+      </div>
+      <div>
+        <i class="bi bi-phone"></i>
+        <div>
+          <p class="infos">Call:</p>
+          <p class="infos-text">+1 5589 55488 55</p>
+        </div>
+      </div>
     </div>
   </div>
 </footer>
