feat: Add SASS module for header styling, generate compiled CSS, and update index.html.

--- a/index.html
+++ b/index.html
@@ -434,12 +434,115 @@
     </section>
 
     <!-- testimonial section (7ta nrj3 liha tahiya)-->
-    <section>
+    <section class="testimonial">
+
+        <div id="carouselExampleCaptions" class="carousel slide">
+  <div class="carousel-indicators pb-10 button-circle">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="carousel-caption testimonials-text testimonials-img pb-10">
+        <div>
+          <img src="public/img/testimonials/testimonials-1.jpg" class="" alt="...">
+            <h5>Saul Goodman</h5>
+            <p class="testopara">Ceo &amp; Founder</p>
+        </div>
+        <div>
+          <p>⭐⭐⭐⭐⭐</p>
+        </div>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, at? Perspiciatis perferendis quos optio! Excepturi a ex cupiditate hic nesciunt dolorum velit adipisci quas ipsum.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="">
+      </div>
+      <div class="carousel-caption testimonials-text testimonials-img pb-10">
+        <div>
+          <img src="public/img/testimonials/testimonials-2.jpg" class="" alt="...">
+            <h5>Sarah Willson</h5>
+            <p class="testopara">Designer</p>
+        </div>
+        <div>
+          <p>⭐⭐⭐⭐⭐</p>
+        </div>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, at? Perspiciatis perferendis quos optio! Excepturi a ex cupiditate hic nesciunt dolorum velit adipisci quas ipsum.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="">
+      </div>
+      <div class="carousel-caption testimonials-text testimonials-img pb-10">
+        <div>
+          <img src="public/img/testimonials/testimonials-3.jpg" class="" alt="...">
+            <h5>Jena Karlis</h5>
+            <p class="testopara">Store Owner</p>
+        </div>
+        <div>
+          <p>⭐⭐⭐⭐⭐</p>
+        </div>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, at? Perspiciatis perferendis quos optio! Excepturi a ex cupiditate hic nesciunt dolorum velit adipisci quas ipsum.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="">
+      </div>
+      <div class="carousel-caption testimonials-text testimonials-img pb-10">
+        <div>
+          <img src="public/img/testimonials/testimonials-4.jpg" class="" alt="...">
+            <h5>Matt Brandon</h5>
+            <p class="testopara">Freelancer</p>
+        </div>
+        <div>
+          <p>⭐⭐⭐⭐⭐</p>
+        </div>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, at? Perspiciatis perferendis quos optio! Excepturi a ex cupiditate hic nesciunt dolorum velit adipisci quas ipsum.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="">
+      </div>
+      <div class="carousel-caption testimonials-text testimonials-img pb-10">
+        <div>
+          <img src="public/img/testimonials/testimonials-5.jpg" class="" alt="...">
+            <h5>John Larson</h5>
+            <p class="testopara"  >Entrepreneur</p>
+        </div>
+        <div>
+          <p>⭐⭐⭐⭐⭐</p>
+        </div>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, at? Perspiciatis perferendis quos optio! Excepturi a ex cupiditate hic nesciunt dolorum velit adipisci quas ipsum.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
-
-      
     </section>
 
 
