--- a/index.html
+++ b/index.html
@@ -217,20 +217,16 @@
     </section>
 
     <!-- Menu (7ta nrj3 liha)-->
-    <section class="whysection">
-      <div class="whyTitle">
-        <p class="text-orange whytitle">MENU</p>
-        <p class="whypara">
-          Check Our Tasty <span class="text-orange">Menu</span>
-        </p>
-      </div>
-      <div>
-        <p>All</p>
-        <p>Starters</p>
-        <p>Salads</p>
-        <p>Specialty</p>
-      </div>
-    </section>
+
+
+
+
+
+
+
+
+
+    
 
     <!--Specials -->
     <section class="whysection">
@@ -269,7 +265,58 @@
     </section>
 
     <!-- Events (7ta nrj3 liha) -->
+<section class="events">
 
+  <div id="carouselExampleCaptions" class="py-5 carousel slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="carousel-caption d-none d-md-block">
+        <div>
+          <img src="public/img/events-slider/events-slider-1.jpg" class="w-50" alt="...">
+        </div>
+        <div>
+          <h5>First slide label</h5>
+          <p>Some representative placeholder content for the first slide.</p>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>
+        <p>Some representative placeholder content for the second slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- Book a Table -->
     <section class="booktable">
       <div class="bookTitle">
         <p class="text-orange booktitle">BOOK A TABLE</p>
