--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
 
 
-    
+
 
     <!--Specials -->
     <section class="whysection">
@@ -268,7 +268,7 @@
 <section class="events">
 
   <div id="carouselExampleCaptions" class="py-5 carousel slide">
-  <div class="carousel-indicators">
+  <div class="carousel-indicators pb-11 button-circle text-orange">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
@@ -276,27 +276,62 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <div class="carousel-caption d-none d-md-block">
+        <div class="d-flex flex-row pb-8">
         <div>
-          <img src="public/img/events-slider/events-slider-1.jpg" class="w-50" alt="...">
+          <img src="public/img/events-slider/events-slider-1.jpg" class="w-100" alt="...">
         </div>
-        <div>
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+        <div class="eventstext">
+          <h5>Birthday Parties</h5>
+          <p class="price">$189</p>
+          <p class="eventspara">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptatibus cum cupiditate.</p>
+          <ul>
+            <li><i class="bi bi-check2-circle text-orange"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li><i class="bi bi-check2-circle text-orange"></i>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+            <li><i class="bi bi-check2-circle text-orange"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li> 
+          </ul>
+          <p class="eventspara">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, minima.</p>
+        </div>
         </div>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
+        <div class="d-flex flex-row pb-8">
+        <div>
+          <img src="public/img/events-slider/events-slider-1.jpg" class="w-100" alt="...">
+        </div>
+        <div>
+          <h5>Birthday Parties</h5>
+          <p class="price">$189</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptatibus cum cupiditate.</p>
+          <ul>
+            <li><i class="bi bi-check-2-circle text-orange"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li><i class="bi bi-check-2-circle text-orange"></i>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+            <li><i class="bi bi-check-2-circle text-orange"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li> 
+          </ul>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, minima.</p>
+        </div>
+        </div>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <div class="d-flex flex-row pb-8">
+        <div>
+          <img src="public/img/events-slider/events-slider-1.jpg" class="w-100" alt="...">
+        </div>
+        <div>
+          <h5>Birthday Parties</h5>
+          <p class="price">$189</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptatibus cum cupiditate.</p>
+          <ul>
+            <li><i class="bi bi-check-2-circle text-orange"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li><i class="bi bi-check-2-circle text-orange"></i>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+            <li><i class="bi bi-check-2-circle text-orange"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li> 
+          </ul>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, minima.</p>
+        </div>
+        </div>
       </div>
     </div>
   </div>
