feat: introduce comprehensive styling for homepage layout and components including header, hero, and content sections.

--- a/index.html
+++ b/index.html
@@ -218,6 +218,158 @@
 
     <!-- Menu (7ta nrj3 liha)-->
 
+<section class="whysection">
+    <div class="whyTitle">
+        <p class="text-orange whytitle">MENU</p>
+        <p class="whypara">
+          Check Our Tasty <span class="text-orange">Menu</span>
+        </p>
+      </div>
+
+    <div class="menu-filter-tabs">
+        <label for="filter-all">all</label>
+        <label for="filter-starters">Starters</label>
+        <label for="filter-salads">Salads</label>
+        <label for="filter-specialty">Specialty</label>
+    </div>
+
+    <div class="menu-content">
+        <input type="radio" name="menu-filter" id="filter-all" checked>
+        <input type="radio" name="menu-filter" id="filter-starters">
+        <input type="radio" name="menu-filter" id="filter-salads">
+        <input type="radio" name="menu-filter" id="filter-specialty">
+
+        <div class="menu-column menu-column-left">
+            <div class="menu-item" data-category="starters">
+                <div>
+                    <img src="public/img/menu/lobster-bisque.jpg" alt="">
+                </div>
+                <div>
+                    <div class="menu-item-header">
+                        <a href="">Lobster Bisque</a>
+                        <div class="dotted-line"></div>
+                        <p>$5.95</p>
+                    </div>
+                    <p>Lorem, deren, trataro, filede, nerada</p>
+                </div>
+            </div>
+
+            <div class="menu-item" data-category="starters">
+                <div>
+                    <img src="public/img/menu/cake.jpg" alt="">
+                </div>
+                <div>
+                    <div class="menu-item-header">
+                        <a href="">Crab Cake</a>
+                        <div class="dotted-line"></div>
+                        <p>$7.95</p>
+                    </div>
+                    <p>Lorem, deren, trataro, filede, nerada</p>
+                </div>
+            </div>
+
+            <div class="menu-item" data-category="specialty">
+                <div>
+                    <img src="public/img/menu/tuscan-grilled.jpg" alt="">
+                </div>
+                <div>
+                    <div class="menu-item-header">
+                        <a href="">Tuscan Grilled</a>
+                        <div class="dotted-line"></div>
+                        <p>$9.95</p>
+                    </div>
+                    <p>Lorem, deren, trataro, filede, nerada</p>
+                </div>
+            </div>
+
+            <div class="menu-item" data-category="salads">
+                <div>
+                    <img src="public/img/menu/greek-salad.jpg" alt="">
+                </div>
+                <div>
+                    <div class="menu-item-header">
+                        <a href="">Greek Salad</a>
+                        <div class="dotted-line"></div>
+                        <p>$9.95</p>
+                    </div>
+                    <p>Lorem, deren, trataro, filede, nerada</p>
+                </div>
+            </div>
+
+            <div class="menu-item" data-category="specialty">
+                <div>
+                    <img src="public/img/menu/lobster-roll.jpg" alt="">
+                </div>
+                <div>
+                    <div class="menu-item-header">
+                        <a href="">Lobster Roll</a>
+                        <div class="dotted-line"></div>
+                        <p>$12.95</p>
+                    </div>
+                    <p>Lorem, deren, trataro, filede, nerada</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="menu-column menu-column-right">
+            <div class="menu-item" data-category="salads">
+                <div>
+                    <img src="public/img/menu/bread-barrel.jpg" alt="">
+                </div>
+                <div>
+                    <div class="menu-item-header">
+                        <a href="">Bread Barrel</a>
+                        <div class="dotted-line"></div>
+                        <p>$6.95</p>
+                    </div>
+                    <p>Lorem, deren, trataro, filede, nerada</p>
+                </div>
+            </div>
+
+            <div class="menu-item" data-category="specialty">
+                <div>
+                    <img src="public/img/menu/caesar.jpg" alt="">
+                </div>
+                <div>
+                    <div class="menu-item-header">
+                        <a href="">Caesar Selections</a>
+                        <div class="dotted-line"></div>
+                        <p>$8.95</p>
+                    </div>
+                    <p>Lorem, deren, trataro, filede, nerada</p>
+                </div>
+            </div>
+
+            <div class="menu-item" data-category="starters">
+                <div>
+                    <img src="public/img/menu/mozzarella.jpg" alt="">
+                </div>
+                <div>
+                    <div class="menu-item-header">
+                        <a href="">Mozzarella Stick</a>
+                        <div class="dotted-line"></div>
+                        <p>$4.95</p>
+                    </div>
+                    <p>Lorem, deren, trataro, filede, nerada</p>
+                </div>
+            </div>
+
+            <div class="menu-item" data-category="salads">
+                <div>
+                    <img src="public/img/menu/spinach-salad.jpg" alt="">
+                </div>
+                <div>
+                    <div class="menu-item-header">
+                        <a href="">Spinach Salad</a>
+                        <div class="dotted-line"></div>
+                        <p>$9.95</p>
+                    </div>
+                    <p>Lorem, deren, trataro, filede, nerada</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
